# Moviecrew

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
moviecrew/: __init__.py  agents.py  assembly.py  cli.py  crew.py  image.py  llm.py  mock.py  reference.py  rules.py  schema.py  studio.py  video.py
moviecrew/portal/: __init__.py  __main__.py  app.py
moviecrew/portal/static/: index.html
tests/: test_anchors.py  test_assembly.py  test_chaining.py  test_contract.py  test_crew.py  test_portal.py  test_prompter_depth.py  test_reference.py  test_smoke.py  test_storyboard.py  test_veo_backend.py  test_video.py
